external-crates/move/crates/move-compiler/tests/move_check/unit_test/expected_failure_bad_value@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10003]: invalid attribute value
  ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:7:35
  │
7 │     #[expected_failure(abort_code=true)]
  │                                   ^^^^ Invalid value in attribute assignment
  │
  = Expected a u64 literal or named constant

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:11:35
   │
11 │     #[expected_failure(abort_code=x"")]
   │                                   ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:15:35
   │
15 │     #[expected_failure(abort_code=b"")]
   │                                   ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:19:35
   │
 2 │ module 0x1::A {
   │             - Unbound constant 'Foo' in module '0x1::A'
   ·
19 │     #[expected_failure(abort_code=Foo)]
   │                                   ^^^ Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:23:35
   │
23 │     #[expected_failure(abort_code=@0xC0FFEE)]
   │                                   ^^^^^^^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant
